New site design

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/index.html"><img src="/assets/images/prebid_white_icon_200x35.png"></a>
+      <a class="navbar-brand" href="/index.html"><img src="/assets/images/logos/prebid_final.png"></a>
     </div>
     
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -29,7 +29,7 @@
 	                    
 	                {% for submenu in item.submenus %}
                     
-                    <li class="dropdown-submenu">
+                    <li class="dropdown dropdown-submenu">
                         <a href="{{submenu.link}}">{{ submenu.title }}</a>
                         
                         {% if submenu.hasBubblePopOut == 1 %}
