--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,140 +2,142 @@
 {% include head.html %}
 
 {% include nav.html %}
-    
-  <div id="headerwrap">
-	  <div class="row">
-		  <h1>Header bidding unwrapped</h1>
-		  <h2>Earn more from your advertising with Prebid, a transparent, open-source solution that increases advertiser demand while maintaining a fast and responsive user experience.</h2>
-        <div class="col-lg-6">
-        </div>
-	    <div>
-		    <!--<images src="images/topgraph.png" class="bg">-->
+
+<div class="homepage">
+	
+	<div class="pb_homewrapper">
+		<div class="pb_homewrapper_img">
+			<img src="/assets/images/homepage/pbhp_bg_top.png">
 		</div>
-	  </div>
-	  
-	  <div class="header-links">
-		  <ul>
-			  <li><a href="/developers.html"><img src="/assets/images/icons/icnDevelopers_wh-sh.png"></a><br>Developers</li>
-			  <li><img src="/assets/images/icons/icnGetStarted_wh-sh.png"><br>Get Started!</li>
-			  <li><img src="/assets/images/icons/icnAdOps_wh-sh.png"><br>Ad Ops</li>
-		  </ul>
-	  </div>
-  </div>
-  <!-- /headerwrap -->
-
-
-  <div class="container">
-    <div class="row mt centered">
-      <div class="col-lg-6 col-lg-offset-3">
-        <h1>The Benefits Of Using Prebid.</h1>
-      </div>
-    </div>
-    <!-- /row -->
-
-    <div class="row mt centered">
-      <div class="col-lg-4">
-        <img src="/assets/images/icons/icnMonetization_org-sh.png" width="180" alt="Monetization">
-        <h4>Maximize Earnings</h4>
-        <p>Bring additional advertiser demand into your ad server, ensuring you get the best possible price for your inventory.</p>
-      </div>
-      <!--/col-lg-4 -->
-
-	  
-      <div class="col-lg-4">
-	      <!--
-        <images src="images/ser02.png" width="180" alt="">
-        <h4>2 - Email Campaigns</h4>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-		-->
-      </div>
-      <!--/col-lg-4 -->
-
-      <div class="col-lg-4">
-        <img src="/assets/images/icons/icnMultiPlatform_org-sh.png" width="180" alt="Multi-Platform">
-        <h4>Use it Everywhere</h4>
-        <p>Apply header bidding to the most popular platforms and formats, including web, mobile app, video, native, AMP, and server-to-server.
-</p>
-
-      </div>
-      <!--/col-lg-4 -->
-    </div>
-    <!-- /row -->
+		
+		<div class="pb_homewrapper_content">
+			<div class="row">
+				<div class="col-lg-12">
+					<h1>Header bidding unwrapped</h1>
+					<h2>Earn more from your advertising with Prebid, a transparent, open-source solution that increases advertiser demand while maintaining a fast and responsive user experience.</h2>
+        		</div>
+			</div>
+			
+			<div class="row">
+				<div class="header-links">
+					
+						<ul>
+							<li><a href="/developers.html"><img src="/assets/images/icons/icnDevelopers_wh-sh.png"></a><br>Developers</li>
+							<li><img src="/assets/images/icons/icnGetStarted_wh-sh.png"><br>Get Started!</li>
+							<li><img src="/assets/images/icons/icnAdOps_wh-sh.png"><br>Ad Ops</li>
+						</ul>
+						
+				</div>
+			</div>
+	 			
+		</div>
+	</div>
+	
+	<div class="pb_home_belowfold">
+		<div class="pb_home_belowfold_img">
+			<img src="/assets/images/homepage/pbhp_bg_bottom.png">
+		</div>
+		
+		<div class="pb_home_belowfold_content">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="pb_home_belowfold_contentbox">
+						<h2>The Benefits Of Using Prebid</h2>
+						
+						<div class="pb_home_belowfold_panel panel_left">
+							<div class="col-sm-3">
+								<img src="/assets/images/icons/icnMonetization.png">
+							</div>
+							
+							<div class="col-sm-6">
+								<h3>Maximize Earnings</h3>
+								<span>Bring additional advertiser demand into your ad server, ensuring you get the best possible price for your inventory.</span>
+							</div>
+						</div>
+						
+						<div class="pb_home_belowfold_panel panel_right">
+							<div class="col-sm-3">
+								<img src="/assets/images/icons/icnMultiPlatform.png">
+							</div>
+							
+							<div class="col-sm-6">
+								<h3>Use it Everywhere</h3>
+								<span>Apply header bidding to the most popular platforms and formats, including web, mobile app, video, native, AMP, and server-to-server.</span>
+							</div>
+						</div>
+						
+						<!-- second row-->
+						
+						<div class="pb_home_belowfold_panel panel_left">
+							<div class="col-sm-3">
+								<img src="/assets/images/icons/icnGetStarted.png">
+							</div>
+							
+							<div class="col-sm-6">
+								<h3>Get Started Quickly</h3>
+								<span>Follow simple step-by-step instructions to download, integrate, and configure header bidding with Prebid.</span>
+							</div>
+						</div>
+						
+						<div class="pb_home_belowfold_panel panel_right">
+							<div class="col-sm-3">
+								<img src="/assets/images/icons/icnOpenSource.png">
+							</div>
+							
+							<div class="col-sm-6">
+								<h3>Join The Community</h3>
+								<span>Become part of our active community of advertising technology experts, where you can quickly resolve issues and contribute to the evolution of the leading header bidding solution.</span>
+							</div>
+						</div>
+						<!--end panels-->							
+					</div>
+				</div>
+			</div>
+			<!--row-->
+			
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="pb_home_belowfold_carousel">
+						<h2>Product Highlights</h2>
+						
+						<!--begin carousel-->
+						<div class="row mt centered">
+							<div class="col-lg-6 col-lg-offset-3">
+								<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+						          <!-- Indicators -->
+						          <ol class="carousel-indicators">
+						            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+						            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+						            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+						          </ol>
+						
+						          <!-- Wrapper for slides -->
+						          <div class="carousel-inner">
+						            <div class="item active">
+						              <img src="/assets/images/pb_slide01.png" alt="">
+						            </div>
+						            <div class="item">
+						              <img src="/assets/images/pb_slide02.png" alt="">
+						            </div>
+						            <div class="item">
+						              <img src="/assets/images/pb_slide03.png" alt="">
+						            </div>
+						        </div>
+							</div>
+						</div>
+						<!--end carousel-->
+					</div>
+				</div>
+			</div>
+			<!-- /row -->
+  		</div>
+	</div>
+	<!--end below the fold-->
+</div>
     
-    <div class="row mt centered">
-      <div class="col-lg-4">
-        <img src="/assets/images/icons/icnEasyInstall_org-sh.png" width="180" alt="Easy Install">
-        <h4>Get Started Quickly</h4>
-        <p>Follow simple step-by-step instructions to download, integrate, and configure header bidding with Prebid.
-</p>
-      </div>
-      <!--/col-lg-4 -->
+<p></p>
 
-	  
-      <div class="col-lg-4">
-	      <!--
-        <images src="images/ser02.png" width="180" alt="">
-        <h4>2 - Email Campaigns</h4>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-		-->
-      </div>
-      <!--/col-lg-4 -->
-
-      <div class="col-lg-4">
-        <img src="/assets/images/icons/icnOpenSource_org-sh.png" width="180" alt="Open Source">
-        <h4>Join The Community</h4>
-        <p>Become part of our active community of advertising technology experts, where you can quickly resolve issues and contribute to the evolution of the leading header bidding solution. </p>
-
-      </div>
-      <!--/col-lg-4 -->
-    </div>
-    <!-- /row -->
-   <hr>
-  </div>
-  <!-- /container -->
-
-  <div class="container">
-    <div class="row mt centered">
-      <div class="col-lg-6 col-lg-offset-3">
-        <h1>Prebid News.</h1>
-      </div>
-    </div>
-    <!-- /row -->
-
-    <div class="row mt centered">
-      <div class="col-lg-6 col-lg-offset-3">
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-          <!-- Indicators -->
-          <ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-          </ol>
-
-          <!-- Wrapper for slides -->
-          <div class="carousel-inner">
-            <div class="item active">
-              <img src="/assets/images/pb_slide01.png" alt="">
-            </div>
-            <div class="item">
-              <img src="/assets/images/pb_slide02.png" alt="">
-            </div>
-            <div class="item">
-              <img src="/assets/images/pb_slide03.png" alt="">
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /col-lg-8 -->
-    </div>
-    <!-- /row -->
-  </div>
-
-  
-
-  {% include footer.html %}
-
-
+{% include footer.html %}
 
   <!-- Template Main Javascript File -->
   <script src="/assets/js/main.js"></script>
