--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,8 @@
     <meta name="keywords" content="Header Bidding, Advanced Bidding, Header Bid, Pre-bid">
     <meta name="description" content="{{page.description}}" />
     
-    <link rel="shortcut icon" type="image/png" href="/favicon.png" /> 
+    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
+    
 
     {% if page.head_title %}
         <title>{{page.head_title}}</title>
@@ -28,6 +29,8 @@
 	
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 		
     <style>
         #content {
