Added modules side nav

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,7 +30,12 @@
 	                {% for submenu in item.submenus %}
                     
                     <li class="dropdown dropdown-submenu">
-                        <a href="{{submenu.link}}">{{ submenu.title }}</a>
+                        <a href="{{submenu.link}}">{{ submenu.title }}
+	                        
+	                        {% if submenu.hasBubblePopOut == 1 %}
+	                       		<span class="caret" />
+	                       	{% endif %}
+                        </a>
                         
                         {% if submenu.hasBubblePopOut == 1 %}
                         
