--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
 	    <div class="col-lg-12">
 		    <div class="pb_footer">
-		    	All demos, instructions, documentation and code included on the Prebid.org website are released under the Apache License. | <a href="/credits.html">Credits</a>
+		    	All demos, instructions, documentation and code included on the Prebid.org website are released under the <a href="{{site.licenseUrl}}" target="_blank">{{site.license}}</a>. | <a href="/credits.html">Credits</a>
 		    </div>
 		</div>
 	</div>
