Fixed bug on credits page

--- a/_layouts/page_v2.html
+++ b/_layouts/page_v2.html
@@ -40,8 +40,8 @@
 			</div>
 			
 			
-			<div class="col-sm-9 main-text" markdown="1">
-					
+			<div class="col-sm-9" markdown="1">
+									
 					{{ content }}
 					
 					{% if page.description == "Partners" %}
@@ -49,6 +49,7 @@
 						{% include partners.html %}
 						
 					{% endif %}
+				
 			</div>
 			
 	</div>
