Making new design responsive

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,9 @@
 <div id="copyrights">
     <div class="container">
-	    <div class="col-lg-12">
-		    <div class="pb_footer">
-		    	All demos, instructions, documentation and code included on the Prebid.org website are released under the <a href="{{site.licenseUrl}}" target="_blank">{{site.license}}</a>. | <a href="/credits.html">Credits</a>
-		    </div>
-		</div>
+	    <div class="pb_footer">
+	    	All demos, instructions, documentation and code included on the Prebid.org website are released<br /> under the <a href="{{site.licenseUrl}}" target="_blank">{{site.license}}</a>. | <a href="/credits.html">Credits</a>
+	    	<p></p>
+	    </div>
 	</div>
   </div>
   <!-- / copyrights -->
