--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,4 +1,3 @@
-
 {% include head.html %}
 
 {% include nav.html %}
@@ -7,7 +6,7 @@
 	
 	<div class="pb_homewrapper">
 		<div class="pb_homewrapper_img">
-			<img src="/assets/images/homepage/pbhp_bg_top.png">
+			<img src="/assets/images/homepage/pbhp_bg.png">
 		</div>
 		
 		<div class="pb_homewrapper_content">
@@ -21,80 +20,86 @@
 			<div class="row">
 				<div class="header-links">
 					
-						<ul>
-							<li><a href="/developers.html"><img src="/assets/images/icons/icnDevelopers_wh-sh.png"></a><br>Developers</li>
-							<li><img src="/assets/images/icons/icnGetStarted_wh-sh.png"><br>Get Started!</li>
-							<li><img src="/assets/images/icons/icnAdOps_wh-sh.png"><br>Ad Ops</li>
-						</ul>
-						
+					<div class="header-links-item"><a href="/developers.html"><img src="/assets/images/icons/icnDevelopers_wh-sh.png"></a><p>Developers</p></div>
+					<div class="header-links-item"><img src="/assets/images/icons/icnGetStarted_wh-sh.png"><p>Get Started!</p></div>
+					<div class="header-links-item"><img src="/assets/images/icons/icnAdOps_wh-sh.png"><p>Ad Ops</p></div>
+					<!--<div class="header-link-item">
+						<a href="/developers.html"><img src="/assets/images/icons/icnDevelopers_wh-sh.png"></a><p>Developers</p>
+					</div>
+					<div class="header-link-item">
+						<img src="/assets/images/icons/icnGetStarted_wh-sh.png"><p>Get Started!</p>
+					</div>
+					<div class="header-link-item">
+						<img src="/assets/images/icons/icnAdOps_wh-sh.png"><p>Ad Ops</p>
+					</div>-->
 				</div>
 			</div>
-	 			
-		</div>
-	</div>
-	
-	<div class="pb_home_belowfold">
-		<div class="pb_home_belowfold_img">
-			<img src="/assets/images/homepage/pbhp_bg_bottom.png">
-		</div>
-		
-		<div class="pb_home_belowfold_content">
+			
+			
 			<div class="row">
-				<div class="col-lg-12">
-					<div class="pb_home_belowfold_contentbox">
-						<h2>The Benefits Of Using Prebid</h2>
-						
-						<div class="pb_home_belowfold_panel panel_left">
-							<div class="col-sm-3">
-								<img src="/assets/images/icons/icnMonetization.png">
+				<div class="pb_home_belowfold">
+					<div class="col-lg-12">
+						<div class="pb_home_belowfold_contentbox">
+							
+							<h2>The Benefits Of Using Prebid</h2>
+							
+							<div class="pb_home_belowfold_panel panel_left">
+								<div class="col-sm-3">
+									<img src="/assets/images/icons/icnMonetization.png">
+								</div>
+							
+								<div class="col-sm-8">
+									<h3>Maximize Earnings</h3>
+									<span>Bring additional advertiser demand into your ad server, ensuring you get the best possible price for your inventory.</span>
+								</div>
 							</div>
 							
-							<div class="col-sm-6">
-								<h3>Maximize Earnings</h3>
-								<span>Bring additional advertiser demand into your ad server, ensuring you get the best possible price for your inventory.</span>
-							</div>
-						</div>
-						
-						<div class="pb_home_belowfold_panel panel_right">
-							<div class="col-sm-3">
-								<img src="/assets/images/icons/icnMultiPlatform.png">
+							<div class="pb_home_belowfold_panel panel_right">
+								<div class="col-sm-3">
+									<img src="/assets/images/icons/icnMultiPlatform.png">
+								</div>
+							
+								<div class="col-sm-8">
+									<h3>Use it Everywhere</h3>
+									<span>Apply header bidding to the most popular platforms and formats, including web, mobile app, video, native, AMP, and server-to-server.</span>
+								</div>
 							</div>
 							
-							<div class="col-sm-6">
-								<h3>Use it Everywhere</h3>
-								<span>Apply header bidding to the most popular platforms and formats, including web, mobile app, video, native, AMP, and server-to-server.</span>
-							</div>
-						</div>
+							<!-- second row-->
 						
-						<!-- second row-->
-						
-						<div class="pb_home_belowfold_panel panel_left">
-							<div class="col-sm-3">
-								<img src="/assets/images/icons/icnGetStarted.png">
+							<div class="pb_home_belowfold_panel panel_left">
+								<div class="col-sm-3">
+									<img src="/assets/images/icons/icnGetStarted.png">
+								</div>
+							
+								<div class="col-sm-8">
+									<h3>Get Started Quickly</h3>
+									<span>Follow simple step-by-step instructions to download, integrate, and configure header bidding with Prebid.</span>
+								</div>
 							</div>
 							
-							<div class="col-sm-6">
-								<h3>Get Started Quickly</h3>
-								<span>Follow simple step-by-step instructions to download, integrate, and configure header bidding with Prebid.</span>
-							</div>
-						</div>
-						
-						<div class="pb_home_belowfold_panel panel_right">
-							<div class="col-sm-3">
-								<img src="/assets/images/icons/icnOpenSource.png">
+							<div class="pb_home_belowfold_panel panel_right">
+								<div class="col-sm-3">
+									<img src="/assets/images/icons/icnOpenSource.png">
+								</div>
+							
+								<div class="col-sm-8">
+									<h3>Join The Community</h3>
+									<span>Become part of our active community of advertising technology experts, where you can quickly resolve issues and contribute to the evolution of the leading header bidding solution.</span>
+								</div>
+								
 							</div>
 							
-							<div class="col-sm-6">
-								<h3>Join The Community</h3>
-								<span>Become part of our active community of advertising technology experts, where you can quickly resolve issues and contribute to the evolution of the leading header bidding solution.</span>
-							</div>
 						</div>
-						<!--end panels-->							
+						<!--end content box-->
 					</div>
 				</div>
+				<!--end belowfold-->
 			</div>
-			<!--row-->
-			
+			<!--end row-->
+		
+		
+		
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="pb_home_belowfold_carousel">
@@ -104,25 +109,41 @@
 						<div class="row mt centered">
 							<div class="col-lg-6 col-lg-offset-3">
 								<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-						          <!-- Indicators -->
+						
+						          <!-- Wrapper for slides -->
+						          <div class="carousel-inner">
+						            <div class="item active">
+						              <h2>Prebid.js</h2>
+						              <h4>A feature-rich header bidding platform for the web, including more than 150 demand sources and 15 analytics adapters. Supports currency conversion, GDPR, common ID systems, and multiple ad servers.</h4>
+						            </div>
+						            <div class="item">
+						              <h2>Prebid Mobile SDK</h2>
+						              <h4>Header bidding for your iOS and Android apps. Combine Prebid SDK and Prebid Server for a great user experience and easy management.</h4>
+						            </div>
+						            <div class="item">
+						              <h2>Prebid Server</h2>
+						              <h4>A server-side header bidding solution with more than 20 demand sources. Hosted by a number of companies in highly available and geo-distributed clusters, Prebid Server lightens the load on browsers, while also enabling mobile app and AMP.</h4>
+						            </div>
+						            
+						            <!-- Indicators -->
 						          <ol class="carousel-indicators">
 						            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 						            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
 						            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
 						          </ol>
-						
-						          <!-- Wrapper for slides -->
-						          <div class="carousel-inner">
-						            <div class="item active">
-						              <img src="/assets/images/pb_slide01.png" alt="">
-						            </div>
-						            <div class="item">
-						              <img src="/assets/images/pb_slide02.png" alt="">
-						            </div>
-						            <div class="item">
-						              <img src="/assets/images/pb_slide03.png" alt="">
-						            </div>
+						          
+						          <!-- Indicators -->
+							          <div class="pb_carousel_indicators">
+								          <ol class="carousel-indicators">
+								            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+								            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+								            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+								          </ol>
+							          </div>
+							          
 						        </div>
+						        
+						        
 							</div>
 						</div>
 						<!--end carousel-->
@@ -130,10 +151,13 @@
 				</div>
 			</div>
 			<!-- /row -->
-  		</div>
+			
+		</div>
+		<!--end pb_homewrapper_content-->
 	</div>
-	<!--end below the fold-->
+	<!--end wrapper-->
 </div>
+<!--end homepage-->
     
 <p></p>
 
@@ -141,4 +165,3 @@
 
   <!-- Template Main Javascript File -->
   <script src="/assets/js/main.js"></script>
-
