partner pages revised

--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -1,7 +1,7 @@
 
 <div class="partners">
 	
-	<div class="title"><h3>Founders Tier</h3></div>
+	<div class="title"><h3>Prebid.org Founding Members</h3></div>
 	<ul>
 	
 	{% for item in site.data.partners %}
@@ -16,7 +16,7 @@
 	
 	</ul>
 	
-	<div class="title"><h3>Standard Tier</h3></div>
+	<div class="title"><h3>Prebid.org Standard Members</h3></div>
 	<ul>
 	
 	{% for item in site.data.partners %}
@@ -31,7 +31,7 @@
 	
 	</ul>
 	
-	<div class="tableTitle"><h3>Partners</h3></div>
+	<div class="tableTitle"><h3>Other Partners</h3></div>
 				
 	<div id="container">
 		
